cleaning up spectral

--- a/spectral/Diffusion, etc..ipynb
+++ b/spectral/Diffusion, etc..ipynb
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0, 26,  0,  8, 30,  0, 15,  0,  0, 19,  0,  4, 13,  0,  5,  0])"
+       "array([ 0, 24,  0, 13, 25,  0, 18,  0,  0, 13,  0,  2, 14,  0, 11,  0])"
       ]
      },
      "execution_count": 3,
@@ -263,8 +263,8 @@
     {
      "data": {
       "text/plain": [
-       "array([  5.4 ,   6.95,   8.9 ,   5.95,   7.3 ,  10.45,  11.2 ,   7.  ,\n",
-       "         6.8 ,   9.95,   9.3 ,   7.2 ,   4.75,   6.95,   6.7 ,   5.2 ])"
+       "array([  5.25,   6.45,   7.2 ,   4.95,   7.55,  10.05,  10.55,   7.85,\n",
+       "         7.15,  10.2 ,   9.85,   7.05,   5.95,   8.05,   7.3 ,   4.6 ])"
       ]
      },
      "execution_count": 4,
@@ -298,8 +298,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  4.6   6.8   7.3   4.7   7.7   7.8   8.    7.2   6.9  10.2   8.7   8.\n",
-      "   3.9   8.1   6.7   5.4]\n"
+      "[  3.8   7.5   6.4   3.9   7.1   9.4  11.6   7.7   6.7   8.5  10.    6.\n",
+      "   5.3   6.9   6.1   5.1]\n"
      ]
     }
    ],
@@ -456,11 +456,11 @@
      "data": {
       "text/plain": [
        "[[0, 0, 1, 1, 0, 1],\n",
-       " [0, 0, 1, 1, 1, 0],\n",
-       " [1, 1, 0, 0, 0, 1],\n",
+       " [0, 0, 1, 0, 1, 1],\n",
        " [1, 1, 0, 0, 1, 0],\n",
-       " [0, 1, 0, 1, 0, 1],\n",
-       " [1, 0, 1, 0, 1, 0]]"
+       " [1, 0, 0, 0, 1, 1],\n",
+       " [0, 1, 1, 1, 0, 0],\n",
+       " [1, 1, 0, 1, 0, 0]]"
       ]
      },
      "execution_count": 9,
@@ -714,7 +714,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWgAAAEACAYAAACeQuziAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEwxJREFUeJzt3V1sXGl9x/GvjbMk8aRe8yJhSiAIBGpHiBetkMVL1+1S\n5FiU9oKVHCEV0Tq9KMtSVaVlb2pzhUpVQbNWLwpdtLwtiGVBIEiqImEBRd0usIHdBKokC46hAVxg\nlzgktctOL85YOZkde87EZ/z8H/h+pCOPn5md+ek8c34+OWdmD0iSJEmSJEmSJEmSJEmSpB24AzgF\nPAR8FHhy2jiSJIBDwCNcLeWPA29KlkaSfo2M9Lj/58AGsB/4ZfvnDwYdSpJUzZ8BF4EfAx9KnEWS\n1PY84DTwVIq97U8Bb0yaSJJ+TfQ6xHET8FXgJ+3f7wNeAXyk9JizFEUuSaruHPD8nTzBi4GHgX3A\nEHA38JaOx7R28gK7aCF1gIoWUgeoaCF1gIoWUgeoaCF1gIoWUgeoYCF1gIp6dudwj/u/CXwQ+Brw\nrfbYP+8wlCSpgl6HOADe3V4kSbuo1x70r5Kl1AEqWkodoKKl1AEqWkodoKKl1AEqWkodoIKl1AEi\nyeUYtCRFsuNj0JKkRCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpak\noCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoKoU9AuBB0vLY8DtgwwlSerfMHABOFga85JXktS/\n2rvztcBXBv0idWpOTMxPT06uvuGWWx6dnpxcbU5MzKfO1M04zI/B6o3w6BisjoM5d8Cc9cohZy7b\neknt3XkX8OeDfpG6NCcm5udmZ9dbJXOzs+vRJm4c5huwTrEuW0CrAevRNgJz1suc9cllW+9Qa3fe\nAKwCTx/ki9RpenJytdXF9OTkaupsZWPFem11Lu3xMMxZL3PWJ5dtvUPP7hzp48kOA1+n+6QslG4v\ntZfkGqOje/oZT2UIuubZajwVc9bLnPXJZFufai+V9VPQR4B7trhvoZ8X3S1rly5t9DOeSgu65tlq\nPBVz1suc9clkW1/i2p3Xnodfqn4OehR4DXBf35ESWlleXjx65Mg1EzQ3O7uxsry8mCpTN8Ow2Oh4\ns4/CxjCY8zqYs1455MxlW08h7DFoyOfMbg5nycGcdTNnfXLZ1kt2pTtDF7QkBdWzO/2qtyQFZUFL\nUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAW\ntCQFZUFLUlAWtCQFZUFLUlBVCvpG4F7g28BpYHKgiSRJAIxUeMw/Ap8H3tB+/OhAE9VsHOYfh9uG\nYE+rfSXin8E7U+fq1ISZg3D7Adh7Ea6swLFTxXoPxZz1Mmd9ctnW6zQGPNLjMWEvGjsO8w1Yp8jY\nAloNWI92ReImzMzBmRa0Npc5ONOEmdTZysxZL3PWJ5dtvcOOu/MlwP3AB4BvAO8D9tf9IoMyBquU\nJmxzaY+HMQ0nym/+zeUwHE+drcyc9TJnfXLZ1jv07M5ehzhGgJcBtwEPAO8F3gH8bcfjFkq3l9pL\nckOwp5/xVA7A3m7jDdi321m2Y856mbM+mWzrU+2lsl4F/f328kD793spCrrTQj8vultasNHPeCoX\n4Uq38TW4vNtZtmPOepmzPpls60tcu/Pa8/BLr09x/BBYAV7Q/v01wKnrCJbEMCw2OiZotH3yIFWm\nblbg2FE4Wx6bg3Pn4c5UmboxZ73MWZ9ctvV+DVV4zIuB9wM3AOeANwOPle5vVXyeJHI5s9uEmWfD\nWxuwbw0un4c7o50lB3PWzZz1yWVbL9mV7gx7klCSAuvZnX6TUJKCsqAlKSgLWpKCsqAlKSgLWpKC\nsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAlKSgLWpKCsqAl\nKSgLWpKCGqn4uO8BPwd+SXHl3JcPKpAkqT/fBZ6yxX2hLxo7DvNjsHojPDoGq+MwnzpTN02YmYYT\nt8LSNJxowkzqTN3kkjOXec8lZw7znsu6LKmtO78LPHXQL1K3cZhvwDpFxhbQasB6tIlrwswcnGlB\na3OZgzPRNoJccuYy77nkzGHec1mXHWrrzkeAB4GvAUcH9SJ1G4NVShO2ubTHw5iGE+U3/+ZyGI6n\nzlaWS85c5j2XnDnMey7rskPP7qx6DPqVwAXg6cC/Ad8Bvly6f6F0e6m9JDcEe/oZT+UA7O023oB9\nu51lO7nkzGXec8mZw7xnsi6n2ktlVQv6QvvnKvApipOEWxV0GK3ihGbl8VQuwpVu42twebezbCeX\nnLnMey45c5j3TNblEtfuvPY8/FLlY3b7gQPt26PAa4GH+gyWxDAsNjomaBQ2hmExVaZuVuDYUThb\nHpuDc+fhzlSZusklZy7znkvOHOY9l3U5CM8FTraXh4E7Ou4Pewwa8jmz24SZw3D8Vlg6DMcjnYAp\nyyVnLvOeS84c5j2XdVmyK90ZuqAlKaie3ek3CSUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUp\nKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpKAtakoKyoCUpqKoF\n/STgQeCzA8wiSSqpWtBvA06T4QVic7nSbxNmpuHErbA0DSciXjUZ8smZy7znkjOHec9lXdbtWcAX\ngN+l+x502NIeh/kGrFNkbAGtBqxHm7gmzMzBmRa0Npc5OBNtI8glZy7znkvOHOY9l3XZoZbu/ATw\nUuBmMivoMVilNGGbS3s8jGk4UX7zby6H4XjqbGW55Mxl3nPJmcO857IuO/TszpEe978O+DHF8eep\nbR63ULq91F6SG4I9/YyncgD2dhtvwL7dzrKdXHLmMu+55Mxh3jNZl1Ns36NP0KugXwG8nuKfMnuB\n3wA+CPxxx+MW+nnR3dKCjX7GU7kIV7qNr8Hl3c6ynVxy5jLvueTMYd4zWZdLXLvzWuvhl+wOcXQ7\nLjUa8LhUt2N8fwpnIx3jg3xy5jLvueTMYd5zWZcdau3Om4HPDPpF6pbLmd0mzByG47fC0mE4HunN\nX5ZLzlzmPZecOcx7LuuyZFe6M3RBS1JQPbvTbxJKUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFL\nUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlAWtCQFZUFLUlBV\nCnovcD9wEjgNvGugiSRJAAxVfNx+4BfACPAV4K/aP6G48GHV59l1zYmJ+YPPec5tjdHRPWuXLm2s\nLC8vnrpw4Z2pc3Uah/nH4bYh2NOCjWFY/BmEy9mEmYNw+wHYexGurMCxU/D51Lk6mbNeOeTMZRsq\nqb079wMPAL/d8SIhNScm5udmZ9dbJXOzs+vNiYlQl2Mfh/kGrFOsyxbQasB6tMvGN2FmDs60oLW5\nzMGZJsykzlZmznrlkDOXbahDbd05THGI4yLw7kG9SN2mJydXW11MT06ups5WNgarlN5Ym0t7PIxp\nOFHeSDeXw3A8dbYyc9Yrh5y5bEMdenbnSMUnehx4CTAG/CswBSyV7l8o3V7quC+Zxujonn7GUxmC\nrnm2Gk/lQHE+4gkasG+3s2zHnPXKIWcm29BUe6msakFvegz4HHATWxd0GGuXLm30M55KC7rm2Wo8\nlYtwpdv4Glze7SzbMWe9csiZyTa0xLW92fPwS5VPcTwNuLF9ex/w+8CDfQZLYmV5efHokSPXTNDc\n7OzGyvLyYqpM3QzDYqPjjTTaPsmRKlM3K3DsKJwtj83BufNwZ6pM3ZizXjnkzGUb6leVM4gvAu6m\nKPNh4EPA35fu91McNcjlDHQTZp4Nb23AvjW4fB7ujHY2H8xZtxxy5rINlexKd4Y9SShJgfXsTr9J\nKElBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlB\nWdCSFJQFLUlBWdCSFJQFLUlBWdCSFJQFLUlBVSnog8AXgVPAw8DtA00kSQKqXVH2Ge3lJNAAvg78\nEfDt9v1e1bsGueTM5crJTZg5CLcfgL0X4coKHIt2FWrIJ2cO857LNlQykO78NHBLx4uE1JyYmJ+b\nnV1vlczNzq43JybmU2cryyXnOMw3YJ1izltAqwHr4xAqZxNm5uBMC1qbyxycacJM6mxlueTMYd5z\n2YY61N6dh4Blij3pgb1IXaYnJ1dbXUxPTq6mzlaWS84xWKW0kW4u7fEwpuFEufQ2l8NwPHW2slxy\n5jDvuWxDHXp250gfT9YA7gXeBqx13LdQur3UXpJrjI7u6Wc8lVxyDkHXPFuNp3IA9nYbb8C+3c6y\nnVxy5jDvmWxDU+2lsqoFvQf4JPBhikMcnRb6edHdsnbp0kY/46nkkrMFXfNsNZ7KRbjSbXwNLu92\nlu3kkjOHec9kG1ri2p3XnodfqnyKYwj4F+A08N7rSZXKyvLy4tEjR66ZoLnZ2Y2V5eXFVJm6ySXn\nMCw2OjbK0fYJo1SZulmBY0fhbHlsDs6dhztTZeoml5w5zHsu21C/qpxBfBXwJeBbXD1mcgdwon3b\nT3HUIJecOZzNh+IE3LPhrQ3YtwaXz8OdET8dkUvOHOY9l22oZFe6M+xJQkkKrGd3+k1CSQrKgpak\noCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxoSQrKgpakoCxo\nSQrKgpakoCxoSQrKgpakoKoU9F3Aj4CHBpxFktSnVwMvZeuC9pqEktS/nt05UuFJvgwc2nGURHK5\n0q8565XDVaghn5w5zHsOGQflEBnuQTcnJubnZmfXWyVzs7PrzYmJ+dTZysxZr3GYb8A6xXuzBbQa\nsD4O5rwOOcx7Dhm7qK07D5FhQU9PTq62upienFxNna3MnPUag1VKpbe5tMfDyCVnDvOeQ8YuajnE\nUcVC6fZSe0muMTq6p5/xVMxZryHommer8VRyyZnDvOeQEZhqL5UNoqDDWLt0aaOf8VTMWa8WdM2z\n1XgqueTMYd5zyMgTd157Hn6p8jG7e4CvAi8AVoA3X0ewJFaWlxePHjlyzQTNzc5urCwvL6bK1I05\n6zUMi42Okhttn4BLlambXHLmMO85ZLweQzU8R6um5xmIXM7smrNeuXw6IpecOcx7Dhk77Ep3hj1J\nKEmB9exOv+otSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ\n0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUlAUtSUFZ0JIUVJWCnga+A5wB/mawcSRJVT0JOAscAvYAJ4Hf\n6nhMLtcknEodoKKp1AEqmkodoKKp1AEqmkodoKKp1AEqmEodoKIdX5Pw5RQF/T2Ky8N/DPjDHcdK\nYyp1gIqmUgeoaCp1gIqmUgeoaCp1gIqmUgeoYCp1gLr0KujfBFZKv3+/PSZJGrBeBZ3L4QtJ+pUz\n1OP+SWCB4kQhwB3A48DflR5zFnhe7ckk6VfbOeD5O3mCkfaTHAJuoPtJQklSIoeB/6LYU74jcRZJ\nkiQpbzl8ieUu4EfAQ6mD9HAQ+CJwCngYuD1tnC3tBe6nONx1GnhX2jjbehLwIPDZ1EG28T3gWxQ5\n/zNtlG3dCNwLfJti3ifTxunqhRTrcXN5jLjb0R0U2/pDwEeBJ9f9AlW+xBLBq4GXEr+gnwG8pH27\nQXFYKeL6BNjf/jkC/AfwqoRZtvOXwEeAz6QOso3vAk9JHaKCu4E/ad8eAcYSZqliGLhAseMTzSHg\nEa6W8seBN3V74E7+Xxy5fInly8DPUoeo4IcUf+QA1ij2VJ6ZLs62ftH+eQPFH+qfJsyylWcBM8D7\n6f1ppdSi5xuj2NG5q/37/1HsnUb2GooPOKz0emACP6fozP0Uf+z2Az/o9sCdFLRfYhmcQxR7/fcn\nzrGVYYo/Jj+iOCxzOm2crt4DvJ3iY6GRtYAvAF8DjibOspXnAqvAB4BvAO/j6r+iopqlOHQQ0U+B\nfwDOA/8NPErxHniCnRS0X2IZjAbFsb63UexJR/Q4xeGYZwG/Q7yv1r4O+DHFccjoe6evpPhjfBh4\nC8WeajQjwMuAf2r/vAS8I2mi7d0A/AHwidRBtvA84C8odsSeSbHNv7HbA3dS0D/g2uM7Byn2onX9\n9gCfBD4MfDpxlioeAz4H3JQ6SIdXAK+nOL57D/B7wAeTJtrahfbPVeBTFIcOo/l+e3mg/fu9FEUd\n1WHg6xTrNKKbgK8CP6E4XHQfxXu2Vjl9ieUQ8U8SDlGUyHtSB+nhaRRn9AH2AV8CbkkXp6ebifsp\njv3AgfbtUeDfgdemi7OtLwEvaN9e4NpvE0fzMbY46RbEiyk+qbWPYru/m+JfT7XL4Uss91Ac5/lf\nimPmb04bZ0uvojh0cJKrHxOa3va/SONFFMchT1J8POztaeP0dDNxP8XxXIr1eJJig426DUFRKg8A\n36TY44v6KY5R4H+4+ocvqr/m6sfs7qb417MkSZIkSZIkSZIkSZIkSZIkSZI0GP8PDdV8/AXHHaYA\nAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xb0614d8c>"
+       "<matplotlib.figure.Figure at 0xb05f6d6c>"
       ]
      },
      "metadata": {},
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -866,7 +866,7 @@
        "        1.42849529,  0.71424764,  0.        ])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -936,7 +936,7 @@
        "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  1.  ]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -986,7 +986,7 @@
        "        0.   ,  0.625,  0.625,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1018,7 +1018,7 @@
        "        0. ,  0. ,  0. ,  0. ,  0. ])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,6 +1026,85 @@
    "source": [
     "L = (diag(sum(G, axis = 1)) - G)\n",
     "around(eig(L)[1][:,0],3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "##Neumann Boundary Conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.5 -0.5  0.   0.   0. ]\n",
+      " [ 0.5  0.   0.5  0.   0. ]\n",
+      " [ 0.   0.5  0.   0.5  0. ]\n",
+      " [ 0.   0.   0.5  0.   0.5]\n",
+      " [ 0.   0.   0.  -0.5  0.5]]\n",
+      "[0 2 4 2 0]\n",
+      "[-2.  2.  2.  2. -2.]\n",
+      "[-0.  0.  2.  0. -0.]\n",
+      "[-1.  1.  0.  1. -1.]\n",
+      "[ 0.5 -0.5  1.  -0.5  0.5]\n",
+      "[-0.75  0.75 -0.5   0.75 -0.75]\n",
+      "[ 0.625 -0.625  0.75  -0.625  0.625]\n",
+      "[-0.6875  0.6875 -0.625   0.6875 -0.6875]\n",
+      "[ 0.6562 -0.6562  0.6875 -0.6562  0.6562]\n",
+      "[-0.6719  0.6719 -0.6562  0.6719 -0.6719]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.6640625, -0.6640625,  0.671875 , -0.6640625,  0.6640625])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def make_string_graph_neumann(n):\n",
+    "    out = [[0 for i in range(n)] for j in range(n)]\n",
+    "    for i in range(n-1):\n",
+    "        out[i][i+1] = 1/2\n",
+    "        out[i+1][i] = 1/2\n",
+    "    out[0][0] = 1/2\n",
+    "    out[0][1] = -1/2\n",
+    "    out[n-1][n-2] = -1/2\n",
+    "    out[n-1][n-1] = 1/2\n",
+    "    return array(out) \n",
+    "\n",
+    "n = 5\n",
+    "A = make_string_graph_neumann(n)\n",
+    "print(A)\n",
+    "L = diag(sum(A, axis = 1)) - A\n",
+    "#print(L)\n",
+    "#eig(L)\n",
+    "def diffuse(state, steps):\n",
+    "    for s in range(steps):\n",
+    "        print(around(state,4))\n",
+    "        new_state = dot(A, state) \n",
+    "        state = new_state  \n",
+    "        state[0] = -state[1]\n",
+    "        state[len(state)-1] = -state[len(state)-2]\n",
+    "        \n",
+    "    return array(state)    \n",
+    "\n",
+    "diffuse([0,2,4,2,0], 10)"
    ]
   },
   {
