--- a/spectral/Markov Chains.ipynb
+++ b/spectral/Markov Chains.ipynb
@@ -384,11 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, weird and awkward. I guess I still have a lot to learn (obviously we need to transpose... )\n",
-    "\n",
-    "I think I'll obvioulsy have to come back to that, but in the meantime...\n",
-    "\n",
-    "actually pretty straightforward, we are actually looking at $\\mathbf{x} P = \\mathbf{x}$, which is fairly easy to verify. Thus, we simply transpose this equation, to get what we wanted."
+    "So we needed to transpose the matrix, this is actually pretty straightforward, because we are actually looking at $\\mathbf{x} P = \\mathbf{x}$, which is fairly easy to verify. Thus, we simply transpose this equation, to get what we wanted."
    ]
   },
   {
