--- a/spectral/Power Method.ipynb
+++ b/spectral/Power Method.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "%pylab inline\n"
+    "%pylab inline"
    ]
   },
   {
@@ -304,13 +304,8 @@
     "\n",
     "$$r_{i,i} = ||\\mathbf{a}'_i||$$\n",
     "\n",
-    "$$r_{i,j} = \\mathbf{q}_i^T \\mathbf{a}_j ~~~~~~ \\text{where} ~~~~ j=i+1, ..., n$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$r_{i,j} = \\mathbf{q}_i^T \\mathbf{a}_j ~~~~~~ \\text{where} ~~~~ j=i+1, ..., n$$\n",
+    "\n",
     "The first step in the QR process is to set $\\mathbf{A}^{(0)} = \\mathbf{A}$ and factor $\\mathbf{A}^{(0)}$ by the Gram-Schmidt process into $\\mathbf{Q}^{(0)}$ and $\\mathbf{R}^{(0)}$. The next step is to reverse the factors  $\\mathbf{Q}^{(0)}$ and $\\mathbf{R}^{(0)}$ to obtain\n",
     "\n",
     "$$\\mathbf{A}^{(1)} =  \\mathbf{R}^{(0)} \\mathbf{Q}^{(0)} $$\n",
@@ -324,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +330,7 @@
        "array([ 13.87058484,   8.62043436,   2.5089808 ])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
