--- a/spectral/Random not using.ipynb
+++ b/spectral/Random not using.ipynb
@@ -180,82 +180,107 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##QR Algorithm\n",
+    "%pylab inline\n",
+    "from numpy.random import choice\n",
+    "#Let's do a square lattice in 2-d\n",
+    "def make_sq_lattice(n):\n",
+    "    nn = n**2\n",
+    "    out = [[0 for i in range(nn)] for j in range(nn)]\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if(j+1 < n):\n",
+    "                out[n*i+j][n*i+j+1] = 1\n",
+    "            if(j-1 >= 0):\n",
+    "                out[n*i+j][n*i+j-1] = 1\n",
+    "            if(i+1 < n):\n",
+    "                out[n*i+j][n*(i+1)+j] = 1\n",
+    "            if(i-1 >= 0):\n",
+    "                out[n*i+j][n*(i-1)+j] = 1\n",
+    "    return array(out)\n",
+    "G = make_sq_lattice(4)\n",
+    "G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 27,  0,  9, 22,  0,  7,  0,  0, 27,  0,  9, 16,  0,  3,  0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 4\n",
+    "G = make_sq_lattice(n)\n",
+    "state = [0 for i in range(n**2)]\n",
+    "#let's put 120 heat units on state 0\n",
+    "state[0] = 120\n",
+    "#state = array([ 0,  3,  0, 11,  1,  0, 15,  0,  0, 25,  0, 26,  6,  0, 33,  0])\n",
     "\n",
-    "\"The basis for the QR method for calculating the eigenvalues of A is the fact that an $n \\times n$ real matrix can be written as \n",
+    "def diffuse(state, steps):\n",
+    "    for s in range(steps):\n",
+    "        new_state = [0 for i in range(n**2)]\n",
+    "        for i in range(n**2):\n",
+    "            while(state[i]>0):\n",
+    "                state[i] -= 1\n",
+    "                next_pos = choice(len(G), p = G[i]/sum(G[i]))\n",
+    "                new_state[next_pos] += 1\n",
+    "        state = new_state \n",
+    "        \n",
+    "        \n",
+    "    return array(state)    \n",
     "\n",
-    "$$A = QR$$\n",
-    "\n",
-    "where Q is orthogonal and R is upper triangular. (I'll probably need some of these definitions as well later). The method is efficient for the calculation of all eigenvalues of a matrix.\"\n",
-    "\n",
-    "\"The construction of Q and R proceeds as follows. Matrices $P_1, P_2, ... , P_{n-1}$ are constructed so that $P_{n-1}P_{n-2}\\cdot \\cdot \\cdot P_2 P_1 A = R$ is upper triangular. These matrices can be chosen as orthogonal matrices and are called <i>householder matrices</i>. If we let \n",
-    "\n",
-    "$$Q^T = P_{n-1}P_{n-2}\\cdot \\cdot \\cdot P_2 P_1$$\n",
-    "\n",
-    "then we have $Q^T A = R$\" and therefore $A = QR$ (because of orthogonality or something like that)\n",
-    "\n",
-    "\"We discuss the construction of the P's presently. First we state how the QR factorization of A is used to find eigenvalues of A. We define sequences of matrices $A_1, A_2, ..., A_m, ...; Q_1, Q_2, ..., Q_m, ... ; R_1, R_2, ..., R_m, ...$ by this process:\n",
-    "\n",
-    "<b>Step 1.</b> Set $A_1 = A, Q_1 = Q$ and $R_1 = R$\n",
-    "\n",
-    "<b>Step 2.</b> Set $A_2 = R_{1} Q_{1}$; then factor $A_2$ as $A_2 = Q_2 R_2$ (QR factorization of $A_2$)\n",
-    "\n",
-    "<b>Step m.</b> Set $A_m = R_{m-1} Q_{m-1}$; then factor $A_m$ as $A_m = Q_m R_m$ (QR factorization of $A_m$)\n",
-    "\n",
-    "\n",
-    "\"Matrix $A_m$ will tend toward a triangular or nearly triangular  form. Thus the eigenvalues will of $A_m$ will be easy to calculate\",i.e., they're just the diagonal entries \". The importance is that if the eigenvalues can be ordered as $|\\lambda_1|>|\\lambda_2|> ... > |\\lambda_n|>0$, then the following is true:\n",
-    "\n",
-    "As m increases the eigenvalues of $A_m$ approach the eigenvalues of A.\n",
-    "\n",
-    "The proof of this fact is well beyond the scope of this book.\n",
-    "\n",
-    "Furthermore, \"If A is symmetric, matrices $A_m$ converge to a diagonal matrix with the eigenvalues on the diagonal\"\n",
-    "\n",
-    "\"Finally, after we find the eigenvalues of A, the corresponding eigenvectors can be found by solving $(\\lambda \\mathbb{I} - A) X = 0$, subject to some side condition such as $|X| = 1$\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "From http://www.math.tamu.edu/~dallen/linear_algebra/chpt6.pdf\n",
-    "\n",
-    "\"The idea in QR factorization is to first find $P_1$ which, when multiplied on the left of A, will produce zeros belos $a_{11}$. That is, we want\n",
-    "\n",
-    "$$P_1 \\left(\\begin{matrix} \n",
-    "a_{11} \\ a_{12} \\ ... \\ a_{1n} \\\\\n",
-    "a_{21} \\ a_{22} \\ ... \\ a_{2n} \\\\\n",
-    "\\vdots \\ ~~~ \\ddots \\ ~~~ \\vdots \\\\\n",
-    "a_{n1} \\ a_{n2} \\ ... \\ a_{nn}\\\\\n",
-    "\\end{matrix}\\right)\n",
-    "=\n",
-    " \\left(\\begin{array} \n",
-    "\\tilde {a_{11}} \\ ~~ \\tilde {a_{12}} \\ ... \\ \\tilde {a_{1n}} \\\\\n",
-    "\\textbf{0} \\ ~~ \\tilde {a_{22}} \\ ... \\ \\tilde {a_{2n}} \\\\\n",
-    "\\vdots \\ ~~~~~ \\ddots \\ ~~~~~ \\vdots \\\\\n",
-    "\\textbf{0} \\ ~~ \\tilde {a_{n2}} \\ ... \\ \\tilde {a_{nn}}\\\\\n",
-    "\\end{array}\\right)\n",
-    "$$\n",
-    "\n",
-    "After this is done, we find $P_2$ which will produce\n",
-    "\n",
-    "\n",
-    "$$P_2 P_1 A = P_2  \\left(\\begin{matrix} \n",
-    "\\tilde {a_{11}} \\ ~~ \\tilde {a_{12}} \\ ... \\ \\tilde {a_{1n}} \\\\\n",
-    "\\textbf{0} \\ ~~ \\tilde {a_{22}} \\ ... \\ \\tilde {a_{2n}} \\\\\n",
-    "\\vdots \\ ~~~~~ \\ddots \\ ~~~~~ \\vdots \\\\\n",
-    "\\textbf{0} \\ ~~ \\tilde {a_{n2}} \\ ... \\ \\tilde {a_{nn}}\\\\\n",
-    "\\end{matrix}\\right)=\n",
-    " \\left(\\begin{matrix} \n",
-    "\\hat {a_{11}} \\ ~ \\hat {a_{12}} ~ \\hat {a_{13}} \\ ... \\ \\hat {a_{1n}} \\\\\n",
-    "\\textbf{0} \\ ~ \\hat {a_{22}} ~ \\hat {a_{23}} \\ ... \\ \\hat {a_{2n}} \\\\\n",
-    "\\textbf{0} \\ ~~ \\textbf {0} ~~~~~ \\hat {a_{33}}  \\ ... \\ ~~ \\hat {a_{3n}} \\\\\n",
-    "\\vdots \\ ~~~~ \\ddots \\ ~~~~~ \\vdots \\\\\n",
-    "\\textbf{0} \\ ~~~~~ \\textbf{0} \\ ~~ \\hat {a_{3n}} \\ ... \\ \\hat {a_{nn}}\\\\\n",
-    "\\end{matrix}\\right)\n",
-    "$$\n",
-    "\n",
-    "."
+    "diffuse(state, 5)"
    ]
   },
   {
