--- a/spectral/Random Walks and Markov Chains.ipynb
+++ b/spectral/Random Walks and Markov Chains.ipynb
@@ -23,6 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##Random Walks & Markov Chains"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\"A <b>random walk</b> on a graph is precisely what its name says: a walk $X_0 X_2 ...$ obtained in a certain random fashion. In its simplest form, it depends oonly on the graph and nothing else. Starting a simple walk at $X_0$, its next vertex, $X_1$, is chosen at random from among the neighbors of $X_0$, then $X_2$ is a random neighbor of $X_1$, and so on.\n",
     "\n",
     "In fact, this <b>simple random walk</b> on a graph is only a little less general than a reversible finite Markov chain: attaching weights to the edges and allowing loops, every reversible finite Markov chain can be obtained in this way.\n",
@@ -263,13 +270,7 @@
    "source": [
     "As we expected.\n",
     "\n",
-    "And to tie this into random walks, we will have to expicitly do a random walk. I guess this example is as good as any:\n",
-    "\n",
-    "hmmm... I guess that example was not so good actually... because obviously the probabilties all must add up? Not sure what the purpose of that was then? You can go check out the exact text here: \n",
-    "\n",
-    "http://www.math.tamu.edu/~dallen/linear_algebra/chpt5.pdf\n",
-    "\n",
-    "Let's try a different example entirely\n",
+    "And to tie this into random walks, we will have to expicitly do a random walk.\n",
     "\n",
     "This is from http://www.econ.brown.edu/students/takeshi_suzuki/math_camp_2011/la3-2011.pdf\n",
     "\n",
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +346,7 @@
        "        [ 0.33333333, -0.38529801,  0.6646122 ]]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +354,7 @@
    "source": [
     "#And now we try with eigenvalues\n",
     "M = array([[0.8, 0.1 , 0.1], [0.3, 0.2, 0.5], [0.2, 0.6,0.2]])\n",
-    "eig(M.T) #Now, i'm really confused\n"
+    "eig(M.T) \n"
    ]
   },
   {
@@ -479,19 +480,8 @@
     "Therefore, $\\mathbf{q} = (2.615, 1.077, 1) q_3$ , where $q_3$ can be whatever we want. This will yield, with correct choice of $q_3$ we have \n",
     "\n",
     "$$\\mathbf{q} = (34/61,  14/61,  13/61)$$\n",
-    "\n",
-    "We can also try a method based on the power method, but I think it is guaranteed to be slower\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
