fixed some weird print out

--- a/spectral/Laplacian and Connected Components.ipynb
+++ b/spectral/Laplacian and Connected Components.ipynb
@@ -27,9 +27,13 @@
    "metadata": {},
    "source": [
     "\"\n",
-    "The adjacency matrix A is real and symmetric, so it is <i>hermition</i>, that is, $<A \\mathbf{x}, \\mathbf{y}> = < \\mathbf{x}, A \\mathbf{y}>$. Hence its <i>numerical range</i>\n",
+    "The adjacency matrix A is real and symmetric, so it is <i>hermition</i>, that is, \n",
     "\n",
-    "$$V(A) = \\{ <A \\mathbf{x}, \\mathbf{x}> : ~~~||\\mathbf{x}|| = 1 \\}$$\n",
+    "$$ < A \\mathbf{x}, \\mathbf{y}> = < \\mathbf{x}, A \\mathbf{y}>$$. \n",
+    "\n",
+    "Hence its <i>numerical range</i>\n",
+    "\n",
+    "$$V(A) = \\{ < A \\mathbf{x}, \\mathbf{x}> : ~~~ ||\\mathbf{x}|| = 1 \\}$$\n",
     "\n",
     "is a closed interval of the real line. \n",
     "\n",
